--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,9 @@
 <html lang="en-us">
 
   {% include head.html %}
-
+  {% if page.math %}
+    {% include mathjax_support.html %}
+  {% endif %}
   <body>
 
     {% include sidebar.html %}
