--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,14 +26,11 @@
 
   <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ '/atom.xml' | absolute_url }}">
 
-  {% if site.google_analytics_id %}
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', '{{ site.google_analytics_id }}', 'auto');
-    ga('send', 'pageview');
-  </script>
-  {% endif %}
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131286067-1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag_(){dataLayer.push(arguments);}
+	gtag_('js', new Date());
+	gtag_('config', 'UA-131286067-1');
+	 </script>
 </head>
